[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Martin Hjelmare", email = "marhje52@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
description = "Handle Leica Matrix Screener experiment images."
license = {text = "MIT"}
name = "leicaimage"
readme = "README.md"
requires-python = ">=3.9"
version = "0.4.0"

dependencies = []
urls."Bug Tracker" = "https://github.com/MartinHjelmare/leicaimage/issues"
urls.Changelog = "https://github.com/MartinHjelmare/leicaimage/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/MartinHjelmare/leicaimage"

[dependency-groups]
dev = [
  "codespell==2.4.1",
  "copier==9.10.0",
  "mypy==1.17.1",
  "pre-commit==4.3.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "python-semantic-release>=10,<11",
  "ruff==0.12.10",
]

[tool.ruff]
line-length = 88
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = ["leicaimage", "tests"]
lint.per-file-ignores."setup.py" = ["D100"]
lint.per-file-ignores."tests/**/*" = [
  "S101",
]
lint.select = [
  "B", # flake8-bugbear
  "D", # flake8-docstrings
  "C4", # flake8-comprehensions
  "S", # flake8-bandit
  "F", # pyflake
  "E", # pycodestyle
  "W", # pycodestyle
  "UP", # pyupgrade
  "I", # isort
  "RUF", # ruff specific
]
target-version = "py39"

[tool.pytest.ini_options]
addopts = """\
    -Wdefault
    --cov=leicaimage
    --cov-report=term-missing
    --cov-report=xml
    """
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "def __repr__",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = [
  'setup.py',
]
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
allow_untyped_defs = true
module = "tests.*"

[tool.semantic_release]
allow_zero_version = true
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
major_on_zero = false
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/leicaimage/__init__.py:__version__",
]

[tool.semantic_release.commit_parser_options]
parse_squash_commits = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
